# Ghostman

./: .gitignore  =3.0.0  AI_INTEGRATION_REPORT.md  AI_SKILL_SELECTION_IMPLEMENTATION.md  ALL_TABS_THEME_FIX.md  ASYNC_CONVERSATION_CREATION_FIX.md  CLAUDE.md  COLLECTIONS_FINAL_IMPLEMENTATION.md  COLLECTIONS_IMPLEMENTATION_PLAN.md  COLLECTIONS_PLAN_SUMMARY.md  COLOR_VARIABLE_REFERENCE.md  CONVERSATION_ISOLATION_IMPLEMENTATION.md  CRASH_AFTER_RESPONSE_FIX.md  DATETIME_AND_REQUIREMENTS_FIX.md  DEFENSIVE_CHECKS_ADDED.md  FAISS_MIGRATION_IMPLEMENTATION_GUIDE.md  FILE_UPLOAD_CONTEXT_FIX.md  FINAL_FIXES.md  FINAL_VALIDATION_REPORT.json  FRAMELESS_RESIZE_PLAN.md  GLOBAL_TODO.md  IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INITIAL_TAB_CREATION_FIX.md  LAYOUT_ORDER_FIX.md  LICENSE  LILAC_THEME_REDESIGN_SUMMARY.md  MANIFEST.in  MIGRATION_004_REFERENCE.txt  MIGRATION_004_USAGE.md  MIGRATION_SUMMARY.md  MODERN_STYLING_ARCHITECTURE.md  PER_TAB_WIDGET_REFACTOR_COMPLETE.md  PKI_IMPLEMENTATION.md  PKI_SESSION_MANAGER_FIX.md  PKI_SETTINGS_SAVE_FIX.md  PKI_VERIFICATION_CHECKLIST.md  PRESET_THEMES_CATALOG.md  RAG_CONTEXT_FIXES_SUMMARY.md  RAG_OPTIMIZATION_COMPLETE.md  (+111 more)
.claude/: settings.local.json
docs/: CLEAN_ICON_STYLING_IMPLEMENTATION.md  CODE_FONT_PRESERVATION_FIX.md  CODE_SNIPPET_ENHANCEMENT_SUMMARY.md  DOCUMENTATION_STRUCTURE.md  ICON_SYSTEM_DOCUMENTATION.md  README.md  SEMANTIC_FONT_SYSTEM_DESIGN.md  SINGLE_INSTANCE_IMPLEMENTATION.md  SSL_CERTIFICATE_FIXES_SUMMARY.md  STYLING_SYSTEM_GUIDE.md  TECHNICAL.md  THEME_PERFORMANCE_ANALYSIS.md  THEME_REDESIGN_SUMMARY.md  help.md  (+8 more)
(+551 files in other folders)
