[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ghostman"
version = "0.1.0"
description = "A desktop overlay app for AI interactions"
authors = [{name = "Ghostman Team"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6>=6.6.0",
    "requests>=2.31.0",
    "openai>=1.0.0",
    "pydantic>=2.0.0",
    "toml>=0.10.2"
]

[project.scripts]
ghostman = "ghostman.src.main:main"

[project.gui-scripts]
ghostman-gui = "ghostman.src.main:main"

[tool.setuptools]
packages = ["ghostman"]